--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,19 @@ footer {
 footer a {
     color: goldenrod;
 }
+
+.flex-item {
+    flex: 3;
+    background-color: hotpink;
+    width: 30%;
+    margin: 1em;
+    text-align: center;
+}
+
+.section-item {
+    margin: 0 auto;
+    width: 100%;
+}
 /* not yet
 nav div {
     color: darkcyan;
